packages/error/test/helpers/throw-error.js
const SemanticReleaseError = require('../..');

module.exports = () => {
  throw new SemanticReleaseError('message', 'code');
};
